--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -71,7 +71,7 @@
                         <input type="submit" value="Sign in" name="">
                     </div>
                     <div class="inputBx">
-                        <p>Don't have an account? <a href="#">Create account</a></p>
+                        <p>Don't have an account? <a href="/users/signup">Create account</a></p>
                     </div>
                 </form>
                 <h4>SNS 계정으로 시작하기</h4>
