--- a/src/main/resources/static/html/about.html
+++ b/src/main/resources/static/html/about.html
@@ -27,11 +27,11 @@
                 <li><a>Shop</a>
                 <div class="sub-bar">
                     <ul>
-                        <li><a href="brands/romanticcrown">ROMANTIC CLOWN</a></li>
-                        <li><a href="brands/apoc">A PIECE OF YOU</a></li>
-                        <li><a href="brands/mardimercredi">MADRID</a></li>
-                        <li><a href="brands/luvistrue">LUVISFALSE</a></li>
-                        <li><a href="brands/lee">LEEKIM</a></li>
+                        <li><a href="/brands/romanticcrown">ROMANTIC CLOWN</a></li>
+                        <li><a href="/brands/apoc">A PIECE OF YOU</a></li>
+                        <li><a href="/brands/mardimercredi">MADRID</a></li>
+                        <li><a href="/brands/luvistrue">LUVISFALSE</a></li>
+                        <li><a href="/brands/lee">LEEKIM</a></li>
                     </ul>
                 </div>
                 </li>
@@ -39,7 +39,7 @@
                 <li><a href="arfitting.html">AR Fitting</a></li>
                 <li><a href="foryou.html">For You</a></li>
                 <li><a class="active" href="about.html">About</a></li>
-                <li id="loginicon"><a href="login.html"><i class="fa-solid fa-user"></i></a></li>
+                <li id="loginicon"><a href="/users/signin"><i class="fa-solid fa-user"></i></a></li>
                 <!-- <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li> -->
                 <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
             </ul>
