0826 상품 정렬 수정

--- a/src/main/resources/static/html/about.html
+++ b/src/main/resources/static/html/about.html
@@ -29,7 +29,7 @@
                     <ul>
                         <li><a href="/brands/romanticcrown">ROMANTIC CLOWN</a></li>
                         <li><a href="/brands/apoc">A PIECE OF YOU</a></li>
-                        <li><a href="/brands/mardimercredi">MADRID</a></li>
+                        <li><a href="/brands/mahagrid">MADRID</a></li>
                         <li><a href="/brands/luvistrue">LUVISFALSE</a></li>
                         <li><a href="/brands/lee">LEEKIM</a></li>
                     </ul>
