--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -107,6 +107,6 @@
     </footer>
     
 
-    <script src="/js/app/script.js"></script>
+    <script src="/jsapp/script.js"></script>
 </body>
 </html>
