--- a/src/main/resources/static/html/arfitting.html
+++ b/src/main/resources/static/html/arfitting.html
@@ -19,7 +19,10 @@
 <body>
     <section id="header">
         <a href="/"><img src="/img/logo.png" class="logo" alt="" width=150px></a>
-
+        <div class="header-icon">
+            <i class="fa-solid fa-arrow-left" onClick="history.go(-1)"></i>
+            <a href="/" id="home"><i class="fa-solid fa-house"></i></a>
+        </div>
         <div>
             <ul id = "navbar">
                 <li><a class="active" href="/">Home</a></li>
@@ -36,7 +39,7 @@
                 </div>
                 </li>
 
-                <li><a href="/html/arfitting.html">AR Fitting</a></li>
+                <li><a class="active" href="/html/arfitting.html">AR Fitting</a></li>
                 <li><a href="/html/foryou.html">For You</a></li>
                 <li><a href="/html/about.html">About</a></li>
                 <li id="loginicon"><a><i class="fa-solid fa-user"></i></a>
@@ -86,7 +89,7 @@
     </footer>
     
 
-    <script src="/js/app/script.js"></script>
+    <script src="/jsapp/script.js"></script>
     <script>
     const bar = document.getElementById('bar');
     const nav = document.getElementById('navbar');
