0915 nav 수정, foryou

--- a/src/main/resources/static/html/arfitting.html
+++ b/src/main/resources/static/html/arfitting.html
@@ -25,7 +25,7 @@
         </div>
         <div>
             <ul id = "navbar">
-                <li><a class="active" href="/">Home</a></li>
+                <li><a href="/">Home</a></li>
 
                 <li><a>Shop</a>
                 <div class="sub-bar">
@@ -40,7 +40,7 @@
                 </li>
 
                 <li><a class="active" href="/html/arfitting.html">AR Fitting</a></li>
-                <li><a href="/html/foryou.html">For You</a></li>
+                <li><a href="/foryou">For You</a></li>
                 <li><a href="/html/about.html">About</a></li>
                 <li id="loginicon"><a><i class="fa-solid fa-user"></i></a>
                     <div class="sub-bar2">
