--- a/src/main/resources/static/html/foryou.html
+++ b/src/main/resources/static/html/foryou.html
@@ -40,7 +40,7 @@
                 </li>
 
                 <li><a href="/html/arfitting.html">AR Fitting</a></li>
-                <li><a class="active" href="/html/foryou.html">For You</a></li>
+                <li><a class="active" href="/foryou">For You</a></li>
                 <li><a href="/html/about.html">About</a></li>
                 <li id="loginicon"><a><i class="fa-solid fa-user"></i></a>
                     <div class="sub-bar2">
