0923 satisfaction by product

--- a/src/main/resources/static/html/about.html
+++ b/src/main/resources/static/html/about.html
@@ -34,7 +34,7 @@
                         <li><a href="/brands/apoc">A PIECE OF YOU</a></li>
                         <li><a href="/brands/mahagrid">MADRID</a></li>
                         <li><a href="/brands/luvistrue">LUVISFALSE</a></li>
-                        <li><a href="/brands/lee">LEEKIM</a></li>
+                        <li><a href="/brands/lee">LEE</a></li>
                     </ul>
                 </div>
                 </li>
