--- a/src/main/resources/static/html/arfitting.html
+++ b/src/main/resources/static/html/arfitting.html
@@ -17,48 +17,47 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <section id="header">
-        <a href="/"><img src="/img/logo.png" class="logo" alt="" width=150px></a>
-        <div class="header-icon">
-            <i class="fa-solid fa-arrow-left" onClick="history.go(-1)"></i>
-            <a href="/" id="home"><i class="fa-solid fa-house"></i></a>
-        </div>
-        <div>
-            <ul id = "navbar">
-                <li><a href="/">Home</a></li>
+<section id="header">
+    <a href="/"><img src="/img/logo.png" class="logo" alt="" width=150px></a>
+    <div class="index-header-icon">
+        <i class="fa-solid fa-arrow-left" onClick="history.go(-1)"></i>
+    </div>
+    <div>
+        <ul id="navbar">
+            <li><a class="active" href="/">Home</a></li>
 
-                <li><a>Shop</a>
+            <li><a>Shop</a>
                 <div class="sub-bar">
                     <ul>
                         <li><a href="/brands/romanticcrown">ROMANTIC CLOWN</a></li>
-                        <li><a href="/brands/apoc">A PIECE OF YOU</a></li>
-                        <li><a href="/brands/mahagrid">MADRID</a></li>
-                        <li><a href="/brands/luvistrue">LUVISFALSE</a></li>
-                        <li><a href="/brands/lee">LEE</a></li>
+                        <li><a href="/brands/apoc">A PIECE OF CAKE</a></li>
+                        <li><a href="/brands/mahagrid">mahagrid</a></li>
+                        <li><a href="/brands/luvistrue">LUVISTRUE</a></li>
+                        <li><a href="/brands/lee">lee</a></li>
                     </ul>
                 </div>
-                </li>
+            </li>
 
-                <li><a class="active" href="/html/arfitting.html">AR Fitting</a></li>
-                <li><a href="/foryou">For You</a></li>
-                <li><a href="/html/about.html">About</a></li>
-                <li id="loginicon"><a><i class="fa-solid fa-user"></i></a>
-                    <div class="sub-bar2">
-                        <ul>
-                            <li><a href="/users/signin">SIGN IN</a></li>
-                            <li><a href="/users/mypage">MY PAGE</a></li>
-                        </ul>
-                    </div>
-                </li>
+            <li><a href="/html/arfitting.html">AR Fitting</a></li>
+            <li><a href="/foryou">For You</a></li>
+            <li><a href="/html/about.html">About</a></li>
 
-                <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
-            </ul>
-        </div>
-        <div id="tab">
-            <i id="bar" class="fa-solid fa-bars"></i>
-        </div>
+            <li id="loginicon"><a><i class="fa-solid fa-user"></i></a>
+                <div class="sub-bar2">
+                    <ul>
+                        <li><a href="/users/signin">SIGN IN</a></li>
+                        <li><a href="/users/mypage">MY PAGE</a></li>
+                    </ul>
+                </div>
+            </li>
 
-    </section>
+            <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
+        </ul>
+    </div>
+    <div id="indextab">
+        <i id="bar" class="fa-solid fa-bars"></i>
+    </div>
+</section>
 
     <section id="arfit">
 
