--- a/src/main/resources/static/html/arfitting.html
+++ b/src/main/resources/static/html/arfitting.html
@@ -24,7 +24,7 @@
     </div>
     <div>
         <ul id="navbar">
-            <li><a class="active" href="/">Home</a></li>
+            <li><a href="/">Home</a></li>
 
             <li><a>Shop</a>
                 <div class="sub-bar">
@@ -38,7 +38,7 @@
                 </div>
             </li>
 
-            <li><a href="/html/arfitting.html">AR Fitting</a></li>
+            <li><a class="active" href="/html/arfitting.html">AR Fitting</a></li>
             <li><a href="/foryou">For You</a></li>
             <li><a href="/html/about.html">About</a></li>
 
